VPC/3-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id

  tags = {
    Name    = "app1_IG"
    Service = "application1"
  }
}

# remember that igw is free to create and you pay for all outbound internet traffic
